Fix possible crash due to misuse of nsCOMPtr.  Bug 238005, r=caillon, sr=peterv, a=asa